--- a/etc/confd/templates/swagger.yaml.tmpl
+++ b/etc/confd/templates/swagger.yaml.tmpl
@@ -3585,6 +3585,135 @@ paths:
         requestTemplates:
           application/json: "{\"statusCode\": 200}"
         type: "mock"
+  /trade/user/unlink:
+    delete:
+      description: |
+        Unlink brokerage account
+      parameters:
+        - name: "X-Replay-Nonce"
+          in: "header"
+          required: false
+          type: "string"
+        - name: body
+          in: body
+          required: true
+          schema:
+            properties:
+              token:
+                type: string
+      responses:
+        '200':
+          description: Logged out account
+          headers:
+            Access-Control-Allow-Origin:
+              type: "string"
+            Access-Control-Expose-Headers:
+              type: "string"
+            X-Session-Refreshed:
+              type: "string"
+            X-Session-TTL:
+              type: "string"
+        '403':
+          description: Invlaid Login
+          headers:
+            Access-Control-Allow-Origin:
+              type: "string"
+            Access-Control-Expose-Headers:
+              type: "string"
+            X-Session-Refreshed:
+              type: "string"
+            X-Session-TTL:
+              type: "string"
+        '500':
+          description: Failure
+          headers:
+            Access-Control-Allow-Origin:
+              type: "string"
+            Access-Control-Expose-Headers:
+              type: "string"
+            X-Session-Refreshed:
+              type: "string"
+            X-Session-TTL:
+              type: "string"
+      x-amazon-apigateway-auth:
+        type: aws_iam
+      x-amazon-apigateway-integration:
+        type: http
+        httpMethod: delete
+        uri: {{getenv "HTTP_PROTOCOL"}}://trade-api.{{getenv "HOSTED_ZONE"}}/user/unlink
+        requestTemplates:
+          application/json: |
+            {
+              "identity": "$context.identity.cognitoIdentityId",
+              "token": $input.json('$.token')
+            }
+        requestParameters:
+          integration.request.header.X-Replay-Nonce: "method.request.header.X-Replay-Nonce"
+        responses:
+          200:
+            statusCode: "200"
+            responseParameters:
+              method.response.header.Access-Control-Allow-Origin: "'*'"
+              method.response.header.Access-Control-Expose-Headers: "'X-Session-Refreshed,X-Session-TTL'"
+              method.response.header.X-Session-Refreshed: "integration.response.header.X-Session-Refreshed"
+              method.response.header.X-Session-TTL: "integration.response.header.X-Session-TTL"
+            responseTemplates:
+              application/json:
+          403:
+            statusCode: "403"
+            responseParameters:
+              method.response.header.Access-Control-Allow-Origin: "'*'"
+              method.response.header.Access-Control-Expose-Headers: "'X-Session-Refreshed,X-Session-TTL'"
+              method.response.header.X-Session-Refreshed: "integration.response.header.X-Session-Refreshed"
+              method.response.header.X-Session-TTL: "integration.response.header.X-Session-TTL"
+            responseTemplates:
+              application/json:
+          500:
+            statusCode: "500"
+            responseParameters:
+              method.response.header.Access-Control-Allow-Origin: "'*'"
+              method.response.header.Access-Control-Expose-Headers: "'X-Session-Refreshed,X-Session-TTL'"
+              method.response.header.X-Session-Refreshed: "integration.response.header.X-Session-Refreshed"
+              method.response.header.X-Session-TTL: "integration.response.header.X-Session-TTL"
+            responseTemplates:
+              application/json:
+          default:
+            statusCode: "200"
+            responseParameters:
+              method.response.header.Access-Control-Allow-Origin: "'*'"
+              method.response.header.Access-Control-Expose-Headers: "'X-Session-Refreshed,X-Session-TTL'"
+              method.response.header.X-Session-Refreshed: "integration.response.header.X-Session-Refreshed"
+              method.response.header.X-Session-TTL: "integration.response.header.X-Session-TTL"
+            responseTemplates:
+              application/json:
+    options:
+      parameters: []
+      responses:
+        200:
+          description: "200 response"
+          headers:
+            Access-Control-Allow-Origin:
+              type: "string"
+            Access-Control-Allow-Methods:
+              type: "string"
+            Access-Control-Allow-Headers:
+              type: "string"
+            Access-Control-Max-Age:
+              type: "string"
+      x-amazon-apigateway-integration:
+        responses:
+          default:
+            statusCode: "200"
+            responseParameters:
+              method.response.header.Access-Control-Max-Age: "'180'"
+              method.response.header.Access-Control-Allow-Methods: "'OPTIONS,DELETE'"
+              method.response.header.Access-Control-Allow-Headers: "'Content-Type,X-Amz-Date,Authorization,X-Api-Key,X-Amz-User-Agent,X-Amz-Security-Token,X-Session-TTL,X-Session-Refreshed,X-Replay-Nonce'"
+              method.response.header.Access-Control-Allow-Origin: "'*'"
+            responseTemplates:
+              application/json: "__passthrough__"
+        requestTemplates:
+          application/json: "{\"statusCode\": 200}"
+        type: "mock"
   /trade/order/positions:
     put:
       description: |
@@ -3604,6 +3733,8 @@ paths:
               account:
                 type: string
               page:
+                type: integer
+              per_page:
                 type: integer
       responses:
         '200':
@@ -3675,7 +3806,8 @@ paths:
               "identity": "$context.identity.cognitoIdentityId",
               "token": $input.json('$.token'),
               "account": $input.json('$.account'),
-              "page": $input.json('$.page')
+              "page": $input.json('$.page'),
+              "per_page": $input.json('$.per_page')
             }
         requestParameters:
           integration.request.header.X-Replay-Nonce: "method.request.header.X-Replay-Nonce"
@@ -3684,7 +3816,7 @@ paths:
             statusCode: "200"
             responseParameters:
               method.response.header.Access-Control-Allow-Origin: "'*'"
-              method.response.header.Access-Control-Expose-Headers: "'X-Session-Refreshed,X-Session-TTL,X-Replay-Nonce'"
+              method.response.header.Access-Control-Expose-Headers: "'X-Session-Refreshed,X-Session-TTL,X-Replay-Nonce,X-Total-Pages,X-Next-Page,X-Previous-Page'"
               method.response.header.X-Session-Refreshed: "integration.response.header.X-Session-Refreshed"
               method.response.header.X-Session-TTL: "integration.response.header.X-Session-TTL"
               method.response.header.X-Total-Pages: "integration.response.header.X-Total-Pages"
@@ -3697,7 +3829,7 @@ paths:
             statusCode: "403"
             responseParameters:
               method.response.header.Access-Control-Allow-Origin: "'*'"
-              method.response.header.Access-Control-Expose-Headers: "'X-Session-Refreshed,X-Session-TTL,X-Replay-Nonce'"
+              method.response.header.Access-Control-Expose-Headers: "'X-Session-Refreshed,X-Session-TTL,X-Replay-Nonce,X-Total-Pages,X-Next-Page,X-Previous-Page'"
               method.response.header.X-Session-Refreshed: "integration.response.header.X-Session-Refreshed"
               method.response.header.X-Session-TTL: "integration.response.header.X-Session-TTL"
               method.response.header.X-Total-Pages: "integration.response.header.X-Total-Pages"
@@ -3710,7 +3842,7 @@ paths:
             statusCode: "500"
             responseParameters:
               method.response.header.Access-Control-Allow-Origin: "'*'"
-              method.response.header.Access-Control-Expose-Headers: "'X-Session-Refreshed,X-Session-TTL,X-Replay-Nonce'"
+              method.response.header.Access-Control-Expose-Headers: "'X-Session-Refreshed,X-Session-TTL,X-Replay-Nonce,X-Total-Pages,X-Next-Page,X-Previous-Page'"
               method.response.header.X-Session-Refreshed: "integration.response.header.X-Session-Refreshed"
               method.response.header.X-Session-TTL: "integration.response.header.X-Session-TTL"
               method.response.header.X-Total-Pages: "integration.response.header.X-Total-Pages"
@@ -3723,12 +3855,154 @@ paths:
             statusCode: "200"
             responseParameters:
               method.response.header.Access-Control-Allow-Origin: "'*'"
-              method.response.header.Access-Control-Expose-Headers: "'X-Session-Refreshed,X-Session-TTL,X-Replay-Nonce'"
+              method.response.header.Access-Control-Expose-Headers: "'X-Session-Refreshed,X-Session-TTL,X-Replay-Nonce,X-Total-Pages,X-Next-Page,X-Previous-Page'"
               method.response.header.X-Session-Refreshed: "integration.response.header.X-Session-Refreshed"
               method.response.header.X-Session-TTL: "integration.response.header.X-Session-TTL"
               method.response.header.X-Total-Pages: "integration.response.header.X-Total-Pages"
               method.response.header.X-Next-Page: "integration.response.header.X-Next-Page"
               method.response.header.X-Previous-Page: "integration.response.header.X-Previous-Page"
+              method.response.header.X-Replay-Nonce: "integration.response.header.X-Replay-Nonce"
+            responseTemplates:
+              application/json:
+    options:
+      parameters: []
+      responses:
+        200:
+          description: "200 response"
+          headers:
+            Access-Control-Allow-Origin:
+              type: "string"
+            Access-Control-Allow-Methods:
+              type: "string"
+            Access-Control-Allow-Headers:
+              type: "string"
+            Access-Control-Max-Age:
+              type: "string"
+      x-amazon-apigateway-integration:
+        responses:
+          default:
+            statusCode: "200"
+            responseParameters:
+              method.response.header.Access-Control-Max-Age: "'180'"
+              method.response.header.Access-Control-Allow-Methods: "'OPTIONS,PUT'"
+              method.response.header.Access-Control-Allow-Headers: "'Content-Type,X-Amz-Date,Authorization,X-Api-Key,X-Amz-User-Agent,X-Amz-Security-Token,X-Session-TTL,X-Session-Refreshed,X-Replay-Nonce'"
+              method.response.header.Access-Control-Allow-Origin: "'*'"
+            responseTemplates:
+              application/json: "__passthrough__"
+        requestTemplates:
+          application/json: "{\"statusCode\": 200}"
+        type: "mock"
+  /trade/order/positions/refresh:
+    put:
+      description: |
+        Refresh positions for an account
+      parameters:
+        - name: "X-Replay-Nonce"
+          in: "header"
+          required: false
+          type: "string"
+        - name: body
+          in: body
+          required: true
+          schema:
+            properties:
+              token:
+                type: string
+              account:
+                type: string
+      responses:
+        '200':
+          description: Got linked accounts
+          headers:
+            Access-Control-Allow-Origin:
+              type: "string"
+            Access-Control-Expose-Headers:
+              type: "string"
+            X-Session-Refreshed:
+              type: "string"
+            X-Session-TTL:
+              type: "string"
+            X-Replay-Nonce:
+              type: "string"
+        '403':
+          description: Invlaid Login
+          headers:
+            Access-Control-Allow-Origin:
+              type: "string"
+            Access-Control-Expose-Headers:
+              type: "string"
+            X-Session-Refreshed:
+              type: "string"
+            X-Session-TTL:
+              type: "string"
+            X-Replay-Nonce:
+              type: "string"
+        '500':
+          description: Failure
+          headers:
+            Access-Control-Allow-Origin:
+              type: "string"
+            Access-Control-Expose-Headers:
+              type: "string"
+            X-Session-Refreshed:
+              type: "string"
+            X-Session-TTL:
+              type: "string"
+            X-Replay-Nonce:
+              type: "string"
+      x-amazon-apigateway-auth:
+        type: aws_iam
+      x-amazon-apigateway-integration:
+        type: http
+        httpMethod: put
+        uri: {{getenv "HTTP_PROTOCOL"}}://trade-api.{{getenv "HOSTED_ZONE"}}/order/positions/refresh
+        requestTemplates:
+          application/json: |
+            {
+              "identity": "$context.identity.cognitoIdentityId",
+              "token": $input.json('$.token'),
+              "account": $input.json('$.account')
+            }
+        requestParameters:
+          integration.request.header.X-Replay-Nonce: "method.request.header.X-Replay-Nonce"
+        responses:
+          200:
+            statusCode: "200"
+            responseParameters:
+              method.response.header.Access-Control-Allow-Origin: "'*'"
+              method.response.header.Access-Control-Expose-Headers: "'X-Session-Refreshed,X-Session-TTL,X-Replay-Nonce'"
+              method.response.header.X-Session-Refreshed: "integration.response.header.X-Session-Refreshed"
+              method.response.header.X-Session-TTL: "integration.response.header.X-Session-TTL"
+              method.response.header.X-Replay-Nonce: "integration.response.header.X-Replay-Nonce"
+            responseTemplates:
+              application/json:
+          403:
+            statusCode: "403"
+            responseParameters:
+              method.response.header.Access-Control-Allow-Origin: "'*'"
+              method.response.header.Access-Control-Expose-Headers: "'X-Session-Refreshed,X-Session-TTL,X-Replay-Nonce'"
+              method.response.header.X-Session-Refreshed: "integration.response.header.X-Session-Refreshed"
+              method.response.header.X-Session-TTL: "integration.response.header.X-Session-TTL"
+              method.response.header.X-Replay-Nonce: "integration.response.header.X-Replay-Nonce"
+            responseTemplates:
+              application/json:
+          500:
+            statusCode: "500"
+            responseParameters:
+              method.response.header.Access-Control-Allow-Origin: "'*'"
+              method.response.header.Access-Control-Expose-Headers: "'X-Session-Refreshed,X-Session-TTL,X-Replay-Nonce'"
+              method.response.header.X-Session-Refreshed: "integration.response.header.X-Session-Refreshed"
+              method.response.header.X-Session-TTL: "integration.response.header.X-Session-TTL"
+              method.response.header.X-Replay-Nonce: "integration.response.header.X-Replay-Nonce"
+            responseTemplates:
+              application/json:
+          default:
+            statusCode: "200"
+            responseParameters:
+              method.response.header.Access-Control-Allow-Origin: "'*'"
+              method.response.header.Access-Control-Expose-Headers: "'X-Session-Refreshed,X-Session-TTL,X-Replay-Nonce'"
+              method.response.header.X-Session-Refreshed: "integration.response.header.X-Session-Refreshed"
+              method.response.header.X-Session-TTL: "integration.response.header.X-Session-TTL"
               method.response.header.X-Replay-Nonce: "integration.response.header.X-Replay-Nonce"
             responseTemplates:
               application/json:
@@ -3929,9 +4203,7 @@ paths:
                 type: string
               type:
                 type: string
-              stop_price:
-                type: number
-              limit_price:
+              price:
                 type: number
       responses:
         '200':
@@ -4004,8 +4276,7 @@ paths:
               "ticker": $input.json('$.ticker'),
               "expiration": $input.json('$.expiration'),
               "type": $input.json('$.type'),
-              "stop_price": $input.json('$.stop_price'),
-              "limit_price": $input.json('$.limit_price')
+              "price": $input.json('$.price')
             }
         requestParameters:
           integration.request.header.X-Replay-Nonce: "method.request.header.X-Replay-Nonce"
